--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+
+.up-and-down{
+  position: relative;
+  opacity: 0;
+  animation: upDown 5s 2;
+  animation-direction: alternate;
+}
+@keyframes upDown{
+  0%{top:-300px; opacity: 1}
+  30%{top: 0px; opacity: 1}
+  100%{top: 0px; opacity: 1}
+}
