--- a/app/views/partial/_new_board.html.erb
+++ b/app/views/partial/_new_board.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">
-          <%= t 'action.create', :value => (t 'controller.contact')%>
+          <%= t 'messages.project.add'%>
         </h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
