--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FreeDo</title>
+    <title><%= t "project.title"%></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body>
-    <%= render 'partial/messages' %>
+  <body style="background:<%= @color %>">
+    <%=render 'partial/messages'%>
+    <%=render 'partial/board' %>
+    <%=render 'partial/list' %>
     <%= yield %>
   </body>
 </html>
