update(view/board) update i18n

--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -24,7 +24,7 @@
         <div class="board-tile mod-add">
           <span class="board-tile-fade"></span>
           <div class="board-tile-details-name">
-            <%= link_to (t 'messages.project.add'), boards_path %>
+            <%= link_to (t 'messages.project.add', :value => (t 'controller.board')), boards_path %>
           </div>
         </div>
       </a>
