--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,11 +1,84 @@
-<p id="notice"><%= notice %></p>
+<%=render 'partial/list' %>
+<script type="text/javascript">
+  $('#modal_list').on('show.bs.modal', function(e) {
+    var listId = $(e.relatedTarget).data('list-id');
+    $(e.currentTarget).find('input[name="list_id"]').val(listId);
+    var listId = $(e.relatedTarget).data('list-id');
+    $(e.currentTarget).find('input[name="list_id_del"]').val(listId);
+    var listName = $(e.relatedTarget).data('list-name');
+    $(e.currentTarget).find('input[name="name"]').val(listName);
+    var boardId = $(e.relatedTarget).data('list-board-id');
+    $(e.currentTarget).find('input[name="board_id"]').val(boardId);
+  });
+</script>
+<% @color = "#0087e0" %>
+<div class="board-main-content">
+  <div class="board-header u-clearfix js-board-header">
+    <div class="board-header-btn board-header-btn-name inline-rename-board js-rename-board" href="#">
+      <span class="js-board-editing-target board-header-btn-text" disabled>
+        <%= @board.title %>
+      </span>
+    </div>
+    <div class="board-header-btns mod-left">
+      <span class="board-header-btn-divider">
+      </span>
+      <a class="btn" disabled><%= @board.description %></a>
+    </div>
+    <div class="board-header-btns mod-right">
+      <a data-toggle="modal" data-target="#modal_board" class="btn btn-light">
+        <i class="fa fa-cog"></i>
+      </a>
+      <%=link_to root_path , class: "btn btn-danger" do %>
+      <i class="fas fa-door-open"></i>
+      <%end%>
+    </div>
+  </div>
+  <div class="board-canvas">
+    <div id="board" class="u-fancy-scrollbar js-no-higher-edits js-list-sortable ui-sortable">
+      <% @all_lists_for_board.each do |list| %>
+      <div class="js-list list-wrapper">
+        <div class="list js-list-content">
 
-<p>
-  <strong>Title:</strong>
-  <%= @board.title %>
-</p>
+          <div class="list-header js-list-header u-clearfix is-menu-shown">
+            <div class="list-header-target js-editing-target"></div>
+            <textarea class="list-header-name mod-list-name js-list-name-input list-title"><%= list.name %></textarea>
+            <div class="list-header-extras">
+              <a data-toggle="modal" href="#modal_list" data-target="#modal_list" data-list-id="<%= list.id %>" data-list-board-id="<%= @board.id %>" data-list-name="<%= list.name %>" class="btn">
+                <i class="fa fa-cog"></i>
+              </a>
+            </div>
+          </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @board.description %>
-</p>
+          <div class="list-cards u-fancy-scrollbar u-clearfix js-list-cards js-sortable ui-sortable">
+            <a class="list-card js-member-droppable ui-droppable" href="">
+              <div class="list-card-details js-card-details">
+                <span class="list-card-title js-card-name" dir="auto">
+                  gg
+                </span>
+                <div class="badges">
+                  sssssssssssssssssss
+                </div>
+              </div>
+            </a>
+          </div>
+          <!-- fim do each -->
+          <a class="open-card-composer js-open-card-composer" data-toggle="modal" data-target="#modal_card">
+            <span class="icon-sm icon-add"></span>
+            <span class="js-add-another-card">Adicionar outro cartão</span>
+          </a>
+        </div>
+      </div>
+      <%end%>
+      <div class="js-add-list list-wrapper mod-add">
+        <%= form_tag({controller: "lists", action: "create" }, method: "post", :id=> "form_list") do %>
+        <%= text_field_tag "name", nil , :maxlength => 20,  class: "list-name-input" , :autocomplete => :off,:required => true %>
+        <%= hidden_field_tag "board_id", @board.id %>
+        <%= button_tag (t 'field.save'), class: "btn btn-success" %>
+        <% end %>
+      </div>
+    </div>
+    <div class="invitee-orientation-mount-point">
+      <div class="invitee-orientation-wrapper"></div>
+    </div>
+  </div>
+</div>
